dark mode fix

--- a/src/assets/css/darkmode.css
+++ b/src/assets/css/darkmode.css
@@ -33,12 +33,12 @@
 }
 
 .dark-mode .textarea, .dark-mode input, .dark-mode .b-form-datepicker, .dark-mode .b-form-timepicker, .dark-mode .b-form-spinbutton {
-	background-color: #222;
+	background-color: #333;
 	color: #fff;
-	border-color: #222;
+	border-color: #333;
 }
 
-.dark-mode .b-form-datepicker .btn, .dark-mode .b-form-timepicker .btn, .dark-mode .b-form-spinbutton .btn {
+.dark-mode .b-form-datepicker .btn, .dark-mode .b-form-timepicker .btn, .dark-mode .b-form-spinbutton .btn, .dark-mode label {
 	color: #fff;
 }
 
